为index文件添加了一个脚本

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,8 @@
 <h2>你好张凯</h2>
 <h1>zhangkai123aw</h1>
 <script src="scripts/all.js"></script>
+<script type="text/javascript">
+	console.log(123);
+</script>
 </body>
 </html>
