添加了img标签

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <h2>你好张凯</h2>
 <h1>zhangkai123aw</h1>
 线上编辑了文件
+<img src="">
 <script src="scripts/all.js"></script>
 <script type="text/javascript">
 	console.log(123);
